manifests/buyerchat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buyerchat
  labels:
    app.kubernetes.io/name: buyerchat
    app.kubernetes.io/part-of: stackup
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
